[23] JEP 455 - Exhaustiveness of Switch #2869 (#2878)
+ true + false = exhaustive over boolean :)
+ leverage PrimitiveConversionRoute for Pattern.coversType()
+ fine-tune combinations of primitive and boxing types
+ fix one omission in BaseTypeBinding.isExactWidening()
+ code gen to respect exhaustiveness of switch over primitives
+ fix code gen for bootstrap in the case of boxing+widening conversion
+ simplify condition for generating a throwing default
+ UNBOXING_CONVERSION is exhaustive (trivial case from 14.11.1.1)
+ implement WIDENING_REFERENCE_AND_UNBOXING_COVERSION and
  ..._AND_WIDENING_PRIMITIVE_CONVERSION
  - detect in Pattern.findPrimitiveConversionRoute()
  - adjust SwitchStatement.typeSwitchSignature()
  - generate in TypePattern.generateTestingConversion()
clarify code gen for BOXING_CONVERSION_AND_WIDENING_REFERENCE_CONVERSION
implement NARROWING_AND_UNBOXING_CONVERSION
+ InstanceOfExpression.generateTypeCheck()
+ TypePattern.generateTestingConversion()
+ Fixes for WIDENING_AND_NARROWING_PRIMITIVE_CONVERSION
  - must be checked before individual narrowing or widening
  - pattern doesn't cover its type
+ Implement remaining routes in InstanceOfExpression.generateTypeCheck()
  + those are unconditionally exact

Additional clean-up:
* clarify terminology for pairs of types
+ prefer 'provided' / 'expected' where possible
+ disentangle Pattern.outerExpressionType out ofExpression.expectedType
+ also connect to terms runtimeType vs. compileTimeType
* + tiny clean-up removing dead code

specific correct error message for incompatible case constant
+ fix bogus expectation in existing tests

fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2869